# cs480_hw2

./: .gitignore  CMakeLists.txt  README.md
cmake/: compiler_flags.cmake  testing.cmake
cpp/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt
cpp/include/: section_table.hpp  sudoku.hpp
cpp/src/: CMakeLists.txt  main.cpp  static_assertions.cpp  sudoku.cpp
cpp/src/Sudoku/: CMakeLists.txt  checking.cpp  section_table.hpp  solve.cpp  trivial_moves.cpp
cpp/tests/src/: CMakeLists.txt
cpp/tests/src/sudoku/: CMakeLists.txt  constraint_checking.cpp  input.cpp  mdspan.cpp  printing_eye_test.cpp  trivial_moves.cpp
doc/: Doxyfile
written_portion/: data.csv  data.md  ehanc001_CS480_HW2_Written_Portion.md
